@@ -1,4 +1,3 @@
-Basis=class=OrthogonalBasis implementation=class=OrthogonalProductPolynomialFactory univariate polynomial collection=[class=OrthogonalUniVariatePolynomialFamily implementation=class=LaguerreFactory k=2.5 measure=class=Gamma name=Gamma dimension=1 k=3.5 lambda=1 gamma=0,class=OrthogonalUniVariatePolynomialFamily implementation=class=LegendreFactory measure=class=Uniform name=Uniform dimension=1 a=-1 b=1,class=OrthogonalUniVariatePolynomialFamily implementation=class=HermiteFactory measure=class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]] measure=class=ComposedDistribution name=ComposedDistribution dimension=3 copula=class=IndependentCopula name=IndependentCopula dimension=3 marginal[0]=class=Gamma name=Gamma dimension=1 k=3.5 lambda=1 gamma=0 marginal[1]=class=Uniform name=Uniform dimension=1 a=-1 b=1 marginal[2]=class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
 i=0 f(point)=class=Point name=Unnamed dimension=1 values=[1]
 i=1 f(point)=class=Point name=Unnamed dimension=1 values=[-1.60357]
 i=2 f(point)=class=Point name=Unnamed dimension=1 values=[0.866025]
@@ -9,3 +8,13 @@ i=6 f(point)=class=Point name=Unnamed dimension=1 values=[-0.801784]
 i=7 f(point)=class=Point name=Unnamed dimension=1 values=[-0.279508]
 i=8 f(point)=class=Point name=Unnamed dimension=1 values=[0.433013]
 i=9 f(point)=class=Point name=Unnamed dimension=1 values=[-0.53033]
+indices=[0,0,0] f(point)=class=Point name=Unnamed dimension=1 values=[1]
+indices=[1,0,0] f(point)=class=Point name=Unnamed dimension=1 values=[-1.60357]
+indices=[0,1,0] f(point)=class=Point name=Unnamed dimension=1 values=[0.866025]
+indices=[0,0,1] f(point)=class=Point name=Unnamed dimension=1 values=[0.5]
+indices=[2,0,0] f(point)=class=Point name=Unnamed dimension=1 values=[2.049]
+indices=[1,1,0] f(point)=class=Point name=Unnamed dimension=1 values=[-1.38873]
+indices=[1,0,1] f(point)=class=Point name=Unnamed dimension=1 values=[-0.801784]
+indices=[0,2,0] f(point)=class=Point name=Unnamed dimension=1 values=[-0.279508]
+indices=[0,1,1] f(point)=class=Point name=Unnamed dimension=1 values=[0.433013]
+indices=[0,0,2] f(point)=class=Point name=Unnamed dimension=1 values=[-0.53033]
