@@ -9,6 +9,16 @@ i= 6 f(X)= [-0.801784]
 i= 7 f(X)= [-0.279508]
 i= 8 f(X)= [0.433013]
 i= 9 f(X)= [-0.53033]
+indices= [0,0,0] f(X)= [1]
+indices= [1,0,0] f(X)= [-1.60357]
+indices= [0,1,0] f(X)= [0.866025]
+indices= [0,0,1] f(X)= [0.5]
+indices= [2,0,0] f(X)= [2.049]
+indices= [1,1,0] f(X)= [-1.38873]
+indices= [1,0,1] f(X)= [-0.801784]
+indices= [0,2,0] f(X)= [-0.279508]
+indices= [0,1,1] f(X)= [0.433013]
+indices= [0,0,2] f(X)= [-0.53033]
 basis= class=OrthogonalProductFunctionFactory factory=class=TensorizedUniVariateFunctionFactory univariate function collection=[class=UniVariateFunctionFamily implementation=class=OrthogonalUniVariatePolynomialFunctionFactory measure=class=Gamma name=Gamma dimension=1 k=3.5 lambda=1 gamma=0,class=UniVariateFunctionFamily implementation=class=HaarWaveletFactory measure=class=Uniform name=Uniform dimension=1 a=0 b=1,class=UniVariateFunctionFamily implementation=class=FourierSeriesFactory measure=class=Uniform name=Uniform dimension=1 a=-3.14159 b=3.14159] enumerate function=class=LinearEnumerateFunction dimension=3 measure=class=ComposedDistribution name=ComposedDistribution dimension=3 copula=class=IndependentCopula name=IndependentCopula dimension=3 marginal[0]=class=Gamma name=Gamma dimension=1 k=3.5 lambda=1 gamma=0 marginal[1]=class=Uniform name=Uniform dimension=1 a=0 b=1 marginal[2]=class=Uniform name=Uniform dimension=1 a=-3.14159 b=3.14159
 i= 0 f(X)= [1]
 i= 1 f(X)= [-1.60357]
@@ -20,3 +30,13 @@ i= 6 f(X)= [-1.08723]
 i= 7 f(X)= [0]
 i= 8 f(X)= [-0.67801]
 i= 9 f(X)= [1.24109]
+indices= [0,0,0] f(X)= [1]
+indices= [1,0,0] f(X)= [-1.60357]
+indices= [0,1,0] f(X)= [-1]
+indices= [0,0,1] f(X)= [0.67801]
+indices= [2,0,0] f(X)= [2.049]
+indices= [1,1,0] f(X)= [1.60357]
+indices= [1,0,1] f(X)= [-1.08723]
+indices= [0,2,0] f(X)= [0]
+indices= [0,1,1] f(X)= [-0.67801]
+indices= [0,0,2] f(X)= [1.24109]
